--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="navbar-collapse collapse" id="menus">
              <ul class="nav navbar-nav pull-right">
                   <li><a href="/"><span class="glyphicon glyphicon-home">Inicio</span></a></li>
-                  <li><a><span class="glyphicon glyphicon-info-sign">Servicios</span></a></li>
+                  <li><a href="templates/servicios.html"><span class="glyphicon glyphicon-info-sign">Servicios</span></a></li>
                   <li><a ><span class="glyphicon glyphicon-map-marker">Ubicacion</span></a></li>
                   <li><a ><span class="glyphicon glyphicon-picture">Fotos</span></a></li>
                   <li><a ><span class="glyphicon glyphicon-phone-alt">Contactenos</span></a></li>
